// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpanderPanel [common] example testing should match snapshot(s) for 1.basic 1`] = `
<Panel
  className="lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed"
  hasMargin={true}
  isGutterless={false}
  isScrollable={true}
>
  <Panel.Header
    className="lucid-ExpanderPanel-header"
    onClick={[Function]}
  >
    <span
      className="lucid-ExpanderPanel-icon"
    >
      <ChevronIcon
        direction="down"
      />
    </span>
    <span>
      Show More
    </span>
  </Panel.Header>
  <Collapsible
    className="lucid-ExpanderPanel-content"
    isAnimated={true}
    isExpanded={false}
    isMountControlled={true}
    mountControlThreshold={4}
    rootType="div"
  >
    <div
      className="lucid-ExpanderPanel-content-inner lucid-ExpanderPanel-content-inner-has-padding"
    >
      <ExpanderPanel.Header>
        Show More
      </ExpanderPanel.Header>
      <div />
      <div>
        --------------
      </div>
      <div>
        -----------------------------
      </div>
      <div>
        ------------------------------------------
      </div>
      <div>
        -----------------------------------------------------
      </div>
      <div>
        ---------------------------------------------------------------
      </div>
      <div>
        ---------------------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------
      </div>
      <div>
        ------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------
      </div>
      <div>
        --------------------------------------
      </div>
      <div>
        -------------------------
      </div>
      <div>
        ----------
      </div>
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div>
        --------
      </div>
      <div>
        -----------------------
      </div>
      <div>
        -------------------------------------
      </div>
      <div>
        -------------------------------------------------
      </div>
      <div>
        -----------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------------
      </div>
      <div>
        ------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        ----------------------------------------------------------------------
      </div>
      <div>
        ----------------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------
      </div>
      <div>
        -------------------------------------------
      </div>
      <div>
        ------------------------------
      </div>
      <div>
        ----------------
      </div>
      <div>
        -
      </div>
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div>
        --
      </div>
      <div>
        -----------------
      </div>
      <div>
        -------------------------------
      </div>
      <div>
        --------------------------------------------
      </div>
      <div>
        -------------------------------------------------------
      </div>
      <div>
        ----------------------------------------------------------------
      </div>
      <div>
        ----------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        ------------------------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------------
      </div>
      <div>
        -----------------------------------------------------------
      </div>
      <div>
        ------------------------------------------------
      </div>
      <div>
        ------------------------------------
      </div>
      <div>
        ----------------------
      </div>
      <div>
        --------
      </div>
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div>
        -----------
      </div>
      <div>
        -------------------------
      </div>
      <div>
        ---------------------------------------
      </div>
      <div>
        ---------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------
      </div>
    </div>
  </Collapsible>
</Panel>
`;

exports[`ExpanderPanel [common] example testing should match snapshot(s) for 2.no-padding 1`] = `
<Panel
  className="lucid-ExpanderPanel lucid-ExpanderPanel-is-collapsed"
  hasMargin={true}
  isGutterless={false}
  isScrollable={true}
>
  <Panel.Header
    className="lucid-ExpanderPanel-header"
    onClick={[Function]}
  >
    <span
      className="lucid-ExpanderPanel-icon"
    >
      <ChevronIcon
        direction="down"
      />
    </span>
    <span>
      Show More
    </span>
  </Panel.Header>
  <Collapsible
    className="lucid-ExpanderPanel-content"
    isAnimated={true}
    isExpanded={false}
    isMountControlled={true}
    mountControlThreshold={4}
    rootType="div"
  >
    <div
      className="lucid-ExpanderPanel-content-inner"
    >
      <ExpanderPanel.Header>
        Show More
      </ExpanderPanel.Header>
      <div />
      <div>
        --------------
      </div>
      <div>
        -----------------------------
      </div>
      <div>
        ------------------------------------------
      </div>
      <div>
        -----------------------------------------------------
      </div>
      <div>
        ---------------------------------------------------------------
      </div>
      <div>
        ---------------------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------
      </div>
      <div>
        ------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------
      </div>
      <div>
        --------------------------------------
      </div>
      <div>
        -------------------------
      </div>
      <div>
        ----------
      </div>
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div>
        --------
      </div>
      <div>
        -----------------------
      </div>
      <div>
        -------------------------------------
      </div>
      <div>
        -------------------------------------------------
      </div>
      <div>
        -----------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------------
      </div>
      <div>
        ------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        ----------------------------------------------------------------------
      </div>
      <div>
        ----------------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------
      </div>
      <div>
        -------------------------------------------
      </div>
      <div>
        ------------------------------
      </div>
      <div>
        ----------------
      </div>
      <div>
        -
      </div>
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div>
        --
      </div>
      <div>
        -----------------
      </div>
      <div>
        -------------------------------
      </div>
      <div>
        --------------------------------------------
      </div>
      <div>
        -------------------------------------------------------
      </div>
      <div>
        ----------------------------------------------------------------
      </div>
      <div>
        ----------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        --------------------------------------------------------------------------
      </div>
      <div>
        ------------------------------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------------
      </div>
      <div>
        -----------------------------------------------------------
      </div>
      <div>
        ------------------------------------------------
      </div>
      <div>
        ------------------------------------
      </div>
      <div>
        ----------------------
      </div>
      <div>
        --------
      </div>
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div />
      <div>
        -----------
      </div>
      <div>
        -------------------------
      </div>
      <div>
        ---------------------------------------
      </div>
      <div>
        ---------------------------------------------------
      </div>
      <div>
        -------------------------------------------------------------
      </div>
    </div>
  </Collapsible>
</Panel>
`;
